syntax = "proto3";

option go_package = "github.com/ghtak/golang.grpc.base/helloworld";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  // Sends another greeting
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

service User {
  rpc GetUser(UserRequest) returns(UserResponse) {}
}

message UserRequest{
  string name = 1;
}

message UserResponse{
  string id = 1;
}